# hyflex-earthobservation-practical

./: README.md  common_errors.ipynb  error_guide.ipynb  forestry_monitoring.ipynb  intro_to_python.ipynb  more_python.ipynb  plotting_functions.py  prac1_logging_site_selection.ipynb  prac2_logging_site_monitoring.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: LOG_SEASON.shx  LOG_SEASON_column_names.txt
practical/: README.md  more_python.ipynb  plotting_functions.py  prac1_logging_site_selection.ipynb  prac2_logging_site_monitoring.ipynb
